--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 					<hr class="wow flipInY" data-wow-delay="2s">
 					<h1 class="tm-title bold shadow wow fadeInRight" data-wow-duration="1s" data-wow-delay="3s">Hi, I
 						am <span style="color:black">Al Razi</span></h1>
-					<h1 class="white bold shadow wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4s">Junior Web
-						Developer</h1>
+					<h1 class="white bold shadow wow fadeInLeft" data-wow-duration="1s" data-wow-delay="4s">Unemployed Web Developer</h1>
 					<!-- <h5 class="white bold shadow click-me">Hover Here</h5> -->
 					<p class="tm-title bold shadow text-center wow jackInTheBox" data-wow-duration="1s" data-wow-delay="5s">
-						Seasoned programmer in Pyton, JS and Dart
+						Advanced Python and EcmaScript Learner
 					</p>
 				</div>
 			</div>
@@ -55,34 +54,44 @@
 					<h3 class="accent">About Me</h3>
 					<h2>Orbis non sufficit</h2>
 					<p>
-						No project too big, no deadline too short, no work too hard, no rest until the end. My mission
-						is always first. <br> <br>
-						I have a lot more experience as a Python Developer (Web Scraping, GUI, Science) but I do web
-						development just for savings. I need more money for better hardware so I can practise more Cyber
-						Security, Game Development and Networking.
+						I am currently busy with my HSC but I have plans for future. I lack experience but I learn very quickly, Alhamdulillah. I do believe that making original things is essential but the part where I shine most in work is when I am given other people's code. Leveraging on someone else's source code is a skill I am honing everyday. My ultimate dream is to master cybersecurity. It means I am free to learn or do anything related to binaries. 
+						<br><br>
+						Technical prowess aside, I have a strong foundation in English. My current past time hobby is to learn about world history and religions and sharing those knowledges with my friends. The background photos were taken by me, Mi A2 Lite.
 					</p>
 				</div>
 			</div>
 			<div class="max-vw col-md-6 col-sm-12 px-0 wow lightSpeedInRight" data-wow-delay="0.5s">
 				<div class="skills">
 					<h2 class="white">Notable Skills</h2>
-					<strong>Wordpress</strong>
-					<span class="pull-right">65%</span>
+					<strong>MERN</strong>
+					<span class="pull-right">55%</span>
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="65"
-							aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div>
+						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="55"
+							aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
 					</div>
-					<strong>React Web</strong>
-					<span class="pull-right">80%</span>
+					<strong>Arduino</strong>
+					<span class="pull-right">45%</span>
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80"
-							aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="45"
+							aria-valuemin="0" aria-valuemax="100" style="width: 45%;"></div>
 					</div>
-					<strong>Web Scraping</strong>
-					<span class="pull-right">90%</span>
+					<strong>Web Scraping ⭐</strong>
+					<span class="pull-right">95%</span>
 					<div class="progress">
-						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="90"
+						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="95"
 							aria-valuemin="0" aria-valuemax="100" style="width: 95%;"></div>
+					</div>
+					<strong>GUI (Qt, tk)</strong>
+					<span class="pull-right">50%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="50"
+							aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>
+					</div>
+					<strong>Flask & Django</strong>
+					<span class="pull-right">40%</span>
+					<div class="progress">
+						<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="40"
+							aria-valuemin="0" aria-valuemax="100" style="width: 40%;"></div>
 					</div>
 				</div>
 			</div>
@@ -99,12 +108,10 @@
 						<h4 class="education-title accent">I.Sc</h4>
 						<div class="education-school">
 							<h5>Notre Dame College</h5><span></span>
-							<h5>July 2019 - June 2021</h5>
+							<h5>July 2019 - Present</h5>
 						</div>
 						<p class="education-description">
-							Notre Dame College is the best boys' college in the entire country. I am honored to have
-							studied there and passed with great distinction as a good student and <strong>Class
-								Captain</strong>. I have been an active member of the Cultural Club since 2020.
+							Notre Dame College is the best boys' college of the country. I am distinguished in my class and college for my strong grip in Physics. I often have to help my friends solve their physics problems. It's fun.
 						</p>
 					</div>
 				</div>
@@ -116,6 +123,10 @@
 						<li>English</li>
 						<li>German</li>
 						<li>Arabic</li>
+						<li>Python</li>
+						<li>Javascript</li>
+						<li>Go</li>
+						<li>C#</li>
 					</ol>
 				</div>
 			</div>
@@ -134,11 +145,12 @@
 						My life goals in short:
 					</p>
 					<ul>
+						<li>Cryptography</li>
 						<li>Automobile & Arms Engineering</li>
-						<li>Cryptograaphy</li>
 						<li>Spice Farm</li>
 						<li>Martial Arts</li>
 					</ul>
+					<p>After all, you only <strike>live</strike> die once</p>
 				</div>
 			</div>
 			<div class="max-vw col-md-8 col-sm-12 wow flipInX" data-wow-delay="2s">
@@ -149,7 +161,7 @@
 						<h5>Notre Dame Cultural Club, Venustas Development Ltd.</h5>
 						<p class="education-description">
 							Albeit it's a college website, it was a major leap in my career as I had to take decisions
-							about the hosting plans and do much work on the UI and Database. you can visit my websites:
+							about the hosting plans and do much work on the UI and Database. you can visit websites I contributed to:
 							<br>
 						<p>
 							<i class="fa fa-globe"></i> <a style="color: white" target="_blank"
@@ -173,17 +185,20 @@
 						Projects
 					</h2>
 					<p>
-						I have done projects for Web (HTML/CSS/JS/PHP/React), Desktop (C++/Python/Java), Mobile
-						(Kivy-python); like these:
+						I have done projects for Web (HTML/CSS/JS/PHP/MERNF), Desktop (C++/Python/Java); Some projects havn't been released into the wild yet. Enjoy.
 					</p>
 					<ul>
 						<li>brtc - Desktop Screen Brightness Controller GUI, Cross Platform</li>
 						<li>clkAngle - GUI Calculator for angles between clock hands</li>
 						<li>WIFI Password Extractor - Command Line Automation (Windows)</li>
-						<li><a target="_blank" href="https://jovial-tereshkova-26fce0.netlify.app/">Bookley</a> -
-							openLibrary API based book search engine</li>
-						<li><a target="_blank" href="https://www.frecodecamp.org">freecodecamp</a> Responsive Web Design
-							Course completed</li>
+						<li><a target="_blank" href="https://jovial-tereshkova-26fce0.netlify.app/">Bookley</a> - openLibrary API based book search engine</li>
+						<li><a target="_blank" href="https://github.com/abartoha/dictionary-com-desktop/releases/tag/beta">Dictionary.com</a> - Desktop GUI of the original website</li>
+						<li><a target="_blank" href="https://github.com/abartoha/apiget/releases/tag/pypi">apiget</a> - my own python pip package that automates fetching RESTful API JSON</li>
+						<li><a target="_blank" href="https://github.com/abartoha/wikipedia-front-page">wikipediaFrontPage</a> - fetches front page important headlines from Wikipedia</li>
+						<li><a target="_blank" href="https://www.frecodecamp.org">freecodecamp</a> Responsive Web Design Course completed</li>
+						<li><a target="_blank" href="https://drug-bd.herokuapp.com/">Drug BD</a> Bangladeshi medicine API (unpolished)</li>
+						<li><a target="_blank" href="https://foodchow-deebb.web.app/">FoodChow</a> Full Stack webapp (Web Course Assignment that I'm not very proud of)</li>
+						<li><a target="_blank" href="https://ruby-1d519.web.app/">RUBY</a> Full Stack Jewellery (Web Course Assignment that I'm not very proud of)</li>
 					</ul>
 				</div>
 			</div>
@@ -194,8 +209,11 @@
 					<p><i class="fa fa-map-marker"></i> <span> </span> 72, Zeropoint, Khulna</p>
 					<p><i class="fa fa-phone"></i> +88-01850-477-827</p>
 					<p><i class="fa fa-envelope"></i> abar.toha@gmail.com</p>
-
-
+					<p>
+						Truth be told, I am NOT available for work right now. but I am available for a chat about any future work to be done. 
+						I have big plans for my very own online exam/quiz platform. 
+						I encourage you to directly call me on cellphone if you want to give me a job or want to work in my online exam platform, so please. 
+					</p>
 				</div>
 			</div>
 		</div>
