Changed about me again

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					<h3 class="accent">About Me</h3>
 					<h2>Orbis non sufficit</h2>
 					<p>
-						I am currently busy with my HSC but I have plans for future. I lack experience but I learn very quickly, Alhamdulillah. I do believe that making original things is essential but the part where I shine most in work is when I am given other people's code. Leveraging on someone else's source code is a skill I am honing everyday. My ultimate dream is to master cybersecurity. It means I am free to learn or do anything related to binaries. 
+						I am currently busy with my HSC. But I need to join somewhere after July 2022. I lack experience, but I learn very quickly, Alhamdulillah. I do believe that writing original code is essential. I can write original software. But the part where I shine most in work is when I work with other people's code. Leveraging on someone else's source code is a skill I am honing every day. My ultimate dream is to work with electronics and IoT security. I want to fund the endeavor by doing Web development.
 						<br><br>
-						Technical prowess aside, I have a strong foundation in English. My current past time hobby is to learn about world history and religions and sharing those knowledges with my friends. The background photos were taken by me, Mi A2 Lite.
+						Technical prowess aside, I have a strong foundation in English. My current pastime hobby is to learn about world history and religions. The background photos were taken by me, Mi A2 Lite. Anything else about me, you can ask in the interview.
 					</p>
 				</div>
 			</div>
